# MobaManagerV2

./: .env.example  .gitignore  CONTINUIDADE.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  run_game.bat  seed_runner.py
.github/workflows/: ci.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  SUMMARY.md  TESTING.md
docs/: HANDOFF_SESSAO.md  PLANO_FADIGA_E_DRAFT_FLEX.md  PLANO_MELHORIAS_SISTEMAS.md  RELATORIO_ESTADO_ATUAL.md  RELATORIO_MELHORIAS_CONTINUIDADE.md  STYLE_BIBLE.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vitest.config.ts
frontend/src/: App.tsx  index.css
scripts/: fetch_player_photos.py
src/: __init__.py  main.py
src/api/: __init__.py  (+3 more)
tests/: conftest.py  test_academy.py  test_api_integration.py  test_career_save.py  test_draft_ai.py  test_draft_analyzer.py  test_draft_scout.py  test_fatigue_recovery.py  test_finance.py  test_form_and_staff_powers.py  test_global_meta.py  test_live_speed.py  test_market_window.py  test_match_depth.py  test_match_engine.py  test_match_engine_service.py  test_math_utils.py  test_morale_practice.py  test_new_career.py  test_offseason.py  test_org_service.py  test_patch_service.py  test_playoff_series.py  test_playoffs.py  test_round_results.py  test_round_robin.py  test_scouting.py  test_sprint_g.py  test_sprint_h.py  test_staff_service.py  test_tactics.py  test_training.py  test_transfer_negotiation.py  test_week_calendar.py
(+119 files in other folders)
